# mprpc-

./: CMakeLists.txt  README.md  autobuild.sh
example/: user.proto
example/callee/: userservice.cc
example/caller/: calluserservice.cc
lib/include/: mprpcchannel.h  mprpcconfig.h
src/: CMakeLists.txt  logger.cpp  mprpcapplication.cpp  mprpcchannel.cpp  mprpcconfig.cpp  mprpccontroller.cpp  rpcheader.proto  rpcprovider.cpp  zookeeperutil.cpp
src/include/: localqueue.h  logger.h  mprpcapplication.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: a.out  main.cpp  test.pb.cc  test.pb.h  test.proto
